fix viewer showing 2 scrollbars

--- a/browser/main/global.styl
+++ b/browser/main/global.styl
@@ -102,3 +102,7 @@ body[data-theme="dark"]
   background #B1D7FE
 ::selection
   background #B1D7FE
+.CodeMirror-wrap
+  opacity 0
+.CodeMirror-focused
+  opacity 100
